exercicio_html - tarefa

--- a/exercicio.html
+++ b/exercicio.html
@@ -6,7 +6,7 @@
     <title>Formulário de Cadastro</title>
 </head>
 <body>
-    <h1>Formulário de Cadastro</h1>
+    <h1>Formulário de cadastro</h1>
     <form>
         <label for="name">Nome</label>
         <input type="text" id="name">
